--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Douglas Sumner / Software Developer</title>
     <meta name="description" content="Douglas Sumner / Software Developer" />
     <meta name="author" content="Douglas Sumner" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/fonts.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
