converting front page from resume to actual website

--- a/basecamp.html
+++ b/basecamp.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Douglas Sumner / Software Developer" />
     <meta name="author" content="Douglas Sumner" />
     <link rel="stylesheet" href="assets/fonts/stranger-fonts.css" />
-    <link rel="stylesheet" href="basecamp-style.css" />
+    <link rel="stylesheet" href="/styles/basecamp-style.css" />
   </head>
 
   <body>
