--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <meta name="description" content="Douglas Sumner / Software Developer" />
     <meta name="author" content="Douglas Sumner" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/fonts.css" />
-    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/2465315f52.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="assets/main-fonts.css" />
+    <link rel="stylesheet" href="/styles/main-style.css" />
   </head>
 
   <body>
-    <script type="module" src="/js/index.js"></script>
+    <script type="module" src="/js/index-main.js"></script>
   </body>
 </html>
