--- a/resume.html
+++ b/resume.html
@@ -7,11 +7,12 @@
     <title>Douglas Sumner / Software Developer</title>
     <meta name="description" content="Douglas Sumner / Software Developer" />
     <meta name="author" content="Douglas Sumner" />
-    <link rel="stylesheet" href="assets/fonts/stranger-fonts.css" />
-    <link rel="stylesheet" href="/styles/stranger-style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/fonts.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
 
-  <body>
-    <script type="module" src="/js/stranger-index.js"></script>
+  <body class="resume-page">
+    <script type="module" src="/js/index.js"></script>
   </body>
 </html>
