--- a/slalom.html
+++ b/slalom.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Jet Slalom</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="/styles/style.css" rel="stylesheet" />
   </head>
 
-  <body>
+  <body style="background:#3c3c3c;">
     <header></header>
 
     <button class="start">Start</button>
