--- a/test.html
+++ b/test.html
@@ -4,23 +4,19 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Douglas Sumner / Basecamp Application</title>
+    <title>Douglas Sumner / Software Developer</title>
     <meta name="description" content="Douglas Sumner / Software Developer" />
     <meta name="author" content="Douglas Sumner" />
-    <link rel="stylesheet" href="assets/fonts/stranger-fonts.css" />
-    <link rel="stylesheet" href="basecamp-style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/2465315f52.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="assets/main-fonts.css" />
+    <link rel="stylesheet" href="/styles/main-style.css" />
   </head>
 
   <body>
-    <h1>
-      <div class="flex">
-        <span class="big">D</span><span id="middle">ougla</span
-        ><span class="big">s</span>
-      </div>
-      <span id="bottom">Sumner</span>
-    </h1>
-    <div id="stranger-cv"></div>
-    <div id="button-area"></div>
-    <script type="module" src="/js/basecamp/test.js"></script>
+    <script type="module" src="/js/index-main.js"></script>
   </body>
 </html>
